--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: My stuff
+title: DFGHJKJHGR
 description: Bookmark this to keep an eye on my project updates!
 
-theme: jekyll-theme-minimal
+theme: jekyll-theme-tactile
